# ChangeLog for dev-ml/core
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-ml/core/ChangeLog,v 1.15 2013/02/07 19:23:45 aballier Exp $

*core-109.07.00 (07 Feb 2013)

  07 Feb 2013; Alexis Ballier <aballier@gentoo.org> +core-109.07.00.ebuild,
  +files/core-109.07.00-nowerror.patch:
  version bump, eapi 5, add subslots and := deps

  17 Oct 2012; Alexis Ballier <aballier@gentoo.org> core-108.07.01.ebuild:
  Mirror the distfile, upstream one fails to fetch, bug #438610 by Nick Bowler

*core-108.07.01 (08 Oct 2012)

  08 Oct 2012; Alexis Ballier <aballier@gentoo.org> +core-108.07.01.ebuild:
  version bump

  07 Aug 2012; Alexis Ballier <aballier@gentoo.org> -core-107.01.ebuild:
  remove old

  09 Jul 2012; Ulrich Müller <ulm@gentoo.org> core-107.01.ebuild,
  core-108.00.01.ebuild:
  Update LICENSE, bug 425140.

*core-108.00.01 (30 Jun 2012)

  30 Jun 2012; Alexis Ballier <aballier@gentoo.org> +core-108.00.01.ebuild,
  +files/core-108.00.01-nocust.patch, +files/core-108.00.01-noinl.patch:
  version bump

  04 May 2012; Alexis Ballier <aballier@gentoo.org> core-107.01.ebuild:
  add doc useflag, by Alexandru Scvortov, bug #413925

  27 Mar 2012; Alexis Ballier <aballier@gentoo.org> core-107.01.ebuild:
  convert to oasis.eclass

  23 Feb 2012; Alexis Ballier <aballier@gentoo.org> -core-0.7.0.ebuild:
  remove old

*core-107.01 (06 Oct 2011)

  06 Oct 2011; Alexis Ballier <aballier@gentoo.org> +core-107.01.ebuild:
  version bump

  06 Jul 2011; Alexis Ballier <aballier@gentoo.org> -core-0.6.0.ebuild,
  -files/core-0.6.0-ocaml312.patch, -core-0.7.0_beta1.ebuild,
  -files/core-0.7.0_beta1-ocaml312.patch:
  remove old

*core-0.7.0 (25 Jun 2011)

  25 Jun 2011; Alexis Ballier <aballier@gentoo.org> +core-0.7.0.ebuild:
  version bump, by Vladimir Ivanov, bug #361171

*core-0.7.0_beta1 (24 Feb 2011)

  24 Feb 2011; Alexis Ballier <aballier@gentoo.org> +core-0.7.0_beta1.ebuild,
  +files/core-0.7.0_beta1-ocaml312.patch: