@@ -7,15 +7,17 @@ AUX core-109.07.00-nowerror.patch 542 SHA256 2a32f17ad213965a08e604061550f4a297b
 DIST core-108.00.01.tar.gz 407778 SHA256 37f1d0d0d12c623d14e10e3418103b3dd2e21584a9c166ab589ce5550934d665 SHA512 075e626b7efbf96a8aaad9c93404275a94f460bdf73a98b6964712492bf291448c024a98122bbb49849f396704e13efde15317e8e1b23a71990a36dc873ea4b0 WHIRLPOOL d30d77ef8be33c6184ed103420df969d4f7d43018b7befaaeb0fc9effc8f637bf8e42801d2f64ccc1898c55a386ca592bbb365c3e6b7e59972276d8d67af285d
 DIST core-108.07.01.tar.gz 771085 SHA256 bac89ed1d691bc93652b8709b98eff945bc91f5390d2e8ce9350177abd9da2af SHA512 dfb1a5740c9349c76183a53b9022320d0f34df576ee040dcbab5e03d0a64e3ed95f3ae9ffbdd30b5a132faaa19005f33a09e80318edf99a5d3796cdb952b9b9f WHIRLPOOL 96a077486e66dc2f04d34fa55fed3471f902592844204c68fb981f4c1484196094c94e0268a7f2423d5ead9b65322c11a2350a1005324a2731ec411a95961a35
 DIST core-109.07.00.tar.gz 778997 SHA256 9d5d78a19939d1380d385319164f6da2381d988d63390534a8af2d25e6b0caf0 SHA512 9e11779437de5a7e578e78973eaca577a78479a40cb5982ad1f4690229d631cf10a917a1baff430ae1232b8173962a75ba3a4643ee99c4be772f48c7d92a765a WHIRLPOOL 3d38855520753dff174a08888df374725cb93bc44a5073e25b6b76241c69206e81be3e72b5c0c16c0c5caaf2ac5179ef62aad5f6f9b16a09c3cb6db89b44f703
+DIST core-109.08.00.tar.gz 786816 SHA256 cbfe0d92ce5828f261b556e52c391d74d48f02a0004c14618129891e705a3be7 SHA512 ffdfd6522d5ccef90f7057c498238378b6895a9b05478d6864b0db3311dbe34e7dbda32e74a05bb2615d5b35155717fc13a4c071a9aad1750464c202f7dd73e3 WHIRLPOOL 67bfbdcaa8f6b5009064375c059c3944c1bbdf61806f38e37adffba34c832ddaf5c2d3d322c51c44b9b7391625b425da46d7b38828ffacec9767c89eb2a45803
 EBUILD core-108.00.01.ebuild 963 SHA256 da277b2919d6c005c09b117cd71b6954b2cb3c2cc66e3e08804609a3652c298c SHA512 01984551e5f3029c34813e29e42e5802e4dfe9ea72800f09679178b56e6a5f0f54780fe58ce5008c7895781c08b90c2c24f2c530f8c3ab29a054100ed79055f2 WHIRLPOOL 7eef21c56f293e142beb7a831e16a40dbe2f222d9c6212123f6ed2fba76fc45f7cc6ea8775a22a52468315a4cb5a83f60ad88305da1dfc0b4660ebeed7bc5b17
 EBUILD core-108.07.01.ebuild 913 SHA256 04d4979072b0525716206bda33543db490a49654bd51b5e8497cf26032c94f7b SHA512 bb5125c81f1791e36dcd42bd04b49b6e359d8b99588f7b567f3e19ad7a43d2f1c64a3f9e62196293d75528d97bc17b1760e595c05a42d2e1b436219930dd5cf5 WHIRLPOOL 1d960b253508b0e54631986eb93b45ddd13e59968973c1a11d9c4464ada1fef729168679da463156009f0c289f741edc8db5b54db86fe73c9983e3a0f444902c
 EBUILD core-109.07.00.ebuild 945 SHA256 32fb9f3f0a03cdd374c96fa773c69f129c70fe64fe8ff4ca65b0608049f0713b SHA512 1fe7f987ed03993cd9fdc96583d09e86bf95800ae66d41ea5464867ca48f3fe6c4eba5b1c4fde472eed8a0f0919eb3802b2d56494e68c1f06677373f3625907b WHIRLPOOL 181468da267787e62a1460ab2c39f024154bbc7f3e52ea9bedda8012b34964bd025a0e9871989fc0290fe1f82ed8bef0f9a798c40f592fd989b05be904d4f437
-MISC ChangeLog 2421 SHA256 a5d391217cc73476e62c776118cc51f05de4ba22ffd22cedeaea204492e21c37 SHA512 d98432132d54a260c8d76b44adbf5ad0ec2df7337a32096f01112969912009806e2976edcdaad314704257e9a9c0fae2cba8b06589fad10c1d88f45c3d7e58ac WHIRLPOOL 6fb163df2e83cab05fe40c997edd88e11e86ea2a660caa715424d0797137cc5400dd1b2d5f0d2925efbfe81d12c049d0c832b1cd9a2edb0fc599f2247acf4cba
+EBUILD core-109.08.00.ebuild 898 SHA256 d0ab743b977aa9dfd6576045132094d559d25201537fe2eeead09dff92fe63c5 SHA512 675cb055466ceb5d1ac8cfff4d458f1ad89467c1381b03a54521d4029bccd92ff5ec087b0c4e37d428079d5a61715410b6234fd25e46be12560faf3d368c4bbf WHIRLPOOL 5eafd06aa0ef2d43b6a25481d4c47a69e2ba97e9af005af69d2f0bb201dc30f71f7c1c28cc86e5038bfaa15882ecdbc86cfde4281ae911b0a97d12e1ecdfbd78
+MISC ChangeLog 2544 SHA256 e3cae5dba3f0713793ea370bca72ad41c4093e4ae264297a56d6d9a96a5ffce4 SHA512 ce6a8794463b751ab4adf02a00eb214f08e9bb50e3c3e9e6444bf8537a1eb0acd0c3602bdbffef18ca4ba75c7860824fcf2ba2f96972204d52b50f7c5f830c15 WHIRLPOOL 8350c6d558c6f4cb910f436951ec803f7097a286d68bd47da2f7f6d44232b80b6e16a1694d1d84feaaa4cd2225f6eae8754fe161be5ec20fe3b63e357f6aa692
 MISC metadata.xml 544 SHA256 5779df3b70a633829dcb09a18f99a65ac4124e5fac46a16b523da4f445bdc715 SHA512 00cc414d67e22bf104584185b2701e70bc76f72953faac7e5fa55e87685a2c3911cb8418ae865eaa31301b26d82b87a59c596eb4c524d52f113eabc738801f37 WHIRLPOOL cdf13646ffbf6957223d6a77cbef18af271cfba1914040f06c43d1230aa41aacc1464997f2f48ef252bfe4ea9eb34d3a62c635f76751fccae85ba00d8b3e3381
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (GNU/Linux)
 
-iEYEAREIAAYFAlET/0IACgkQvFcC4BYPU0odUwCgi5+a5W8TJlEy5IDfGuy0gVZE
-j2gAn08lQB9tqGgKKZu8b5lhisztGY1x
-=Mbvq
+iEYEAREIAAYFAlEVuToACgkQvFcC4BYPU0opGgCgg7e32P6AIH4vvcp7pxrh98hf
+YZ4An30ctPYKl/7XHF/6/TJydOHiGRyx
+=lQWa
 -----END PGP SIGNATURE-----
