@@ -4,15 +4,17 @@ Hash: SHA256
 DIST core_extended-108.00.01.tar.gz 272736 SHA256 ac7cf7a399ed33a47c6fccc9eae3aa16bfe9f930d61642331f1fa1eb9b6fecf2 SHA512 421bba61450fea1be2bdb0d04f2b9b5f4985e46072c8e6632ce12c93e4000761e1a30b3824d92c4160dabf3bf1967d24bb268f9c76f37fcd768b2131474d5c9d WHIRLPOOL 40b91082a75e031e435c4ca434b91ce7f0df22e8e315075c944b2bd01e3def7e94470dd1b73e02a463fb4b6757ebe372dbf064789a1748d7430260a9eddfaafa
 DIST core_extended-108.07.01.tar.gz 269569 SHA256 2ee0cd3a156a34544df5c7a5dcfbca194cdd132a5448c3f90e125600ce0d86dc SHA512 7775044add99a62504bedf3e0ef39408ce89db99e15a6ff5508b6a7e5fcb402e529ee75ba68e6aaf3fb3ed79da0dd74dc9f26ec48c7b3bce6fc46af6b8ea0007 WHIRLPOOL 0ad269bf20d9cec8f5bd8ac2bc971df8003d072e28316eae61f7b9cd90776661ab94f5f7cbb3af04e48767662813158e820c6f204a0f2974cf9fcf24196a9389
 DIST core_extended-109.07.00.tar.gz 274199 SHA256 75eefc4a637eb6fa5471c5abe02449fceaecbc7ca7008518be4bb6dbe82dbda7 SHA512 a46853e439c2edf833841ee34b2d2b9644ab717251958c6ecf5bf908699aebf2576ee82c4c4f785b0528f44934da83511a1996a4c040ad2fcba55f378c3c72c6 WHIRLPOOL 36400793629c382fa46359b848b53cc8d3a894407811f900d1b0ecd771dd69102ad1eba1c77cf59860ed57549d047036de9eb2dfa29d7de7840f793281ee3a1a
+DIST core_extended-109.08.00.tar.gz 275052 SHA256 752ce06e5be433cdafc2c89d4448ea06b37610ad7392f2b23b2680953b76c532 SHA512 6d58f23fe60bfc3d55e274ceeb41146de58e46cbdf610aae50a4af25c68baf801d57d190a849246e14442062aa7d8524a2876ffac31761152bf5a1b10136f6fa WHIRLPOOL 602080940f7a51d254620e46db8f9e1a6e96a97b7bdcf41f10ef668697ba2559d05d5a7786c84734838bcc641860d7223ed4749b6d6a9b6b7b829c376341f00a
 EBUILD core_extended-108.00.01.ebuild 839 SHA256 391ba5594edd53d29ed81fc0e02409f16f61bf8eb3f666a66d87d40c4dd71af4 SHA512 aea9bfce0a2a574e11c8314127e80925622f57880f0559e1dde93650df851dc17e2e8d3c88b99d1a9d697bfa3dde94723dcc8ee3ae6fe487ce4161f2f7301fa7 WHIRLPOOL d8ccbe71a213f35cd6a1852d7f9127f33c0c58264ef604d795590979e50b286a62e70b178bc9b63ea1c6c913fb1f51ea32dea8782660132b1a77eacd0154b327
 EBUILD core_extended-108.07.01.ebuild 902 SHA256 7ea02420b8eb6b0f06db566ab5ae4a4000498a66545329c9613cddf4c810878d SHA512 fbbc12c84ecbe1cd92c2072c39d0b810ffd963dce248d3995c28d618d9fc6688d0f3c450ead697515fdccdb22083c2834daf06be7ba57ba43bc5ad0041a3f6fe WHIRLPOOL 8ea3c1273ec8340a5336a225980c4ee1f6817c56af302b52270c9d744717669af5fc7a83876fda56fef6681351659c7f857838e02e9042b1d75854bea39307d5
 EBUILD core_extended-109.07.00.ebuild 916 SHA256 58d00231148119497a1a55f64f2e9456b74ce8d5b0c87ceeb8d1dd80179b7a74 SHA512 917bd45dac714b42f1686d2e77b8064360e1f74430132f201be5f10dbab4a723e64d3d57454c29632f7127ef9cd786e4a37a49cfde369e0d949576687a51413d WHIRLPOOL 05dd074801a407b3f5e5d025383cfc321f6d6697123ece591ce95bfe36314f20fb1689884284e53af6e00de86304dde45770714204ccb88092c9b03346edad5d
-MISC ChangeLog 1438 SHA256 67769d7bac51b2dc6a8146d5780c04113e5474646ca4f36ec86f7780166ffb09 SHA512 f9fe372331d5c42071988e6367e0ab0b057ca46ffd8c2f660847cefb641e9657cfa3b6357cdacb501e8b861e0f24b0835a46de6173cd1e47858f3f1855780836 WHIRLPOOL fef81efe38779af66c78488830061b8149bb63f2dbd35f88150a9226157d9b00b225bb2c7a3c45cbf5abbd4a42563f889855afc1cfb51738c1906035613e297b
+EBUILD core_extended-109.08.00.ebuild 916 SHA256 d6b7b016b04c8bd3eeaf08669ef645742e253f8e4d25c5be77f429059f4f269f SHA512 6d7f9535b8ec09fb6ac88c1ee2a457735d651bcf9c046ffbb84e544864f2a084ad0513fc67b660514b285f5dba93ac0c595ccb28331ab9c4af2598ba1e0304d1 WHIRLPOOL b5ab3e90e36cbff7598948844a4174d643b8e85278b802a20450672eff50416f154fb3b8a072d0fd438dc25890f228f78358400a130d8a83702a15e0ef2bbc89
+MISC ChangeLog 1581 SHA256 01ecae4c89b2a116bcdd7694240849cb25556d948ae971f2e7fcc117e5aed996 SHA512 6ef99c76141c4eb67bf9edb82fdee69fc31f80463d875d5329a621ed1173405828348d2be860911af0f11de580a6d7fcde63d8eb0bcb051ea1029023516acdde WHIRLPOOL 683c2c9be271304dd6dc1a96eae563094022cd76cd662b904d308eaa18c99feda675abca82f144291201387a006329d23e4adf1c97c217a691d5854a3f9ecd89
 MISC metadata.xml 155 SHA256 118048376ebb76f57628b0819f3de4856e73959c2578c88715d37ea2d1e0af81 SHA512 a525f91dd332fc144c42d1437bdae9c889cbcece6294c2d2f4baf6a532ac2e13492736e75b41c83fac31033a9ae53c37deb96286a5ab8575611136617640952c WHIRLPOOL 71a9c7aaf4e268c65c0d1e30e343911ccbcf99ef8c23773abc2b3af8d58d9f7d5c09632805d8ba9050c09eef629f2b340db9eb9ba8b9cd2e5d655fce3f91fcb6
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (GNU/Linux)
 
-iEYEAREIAAYFAlEUAKEACgkQvFcC4BYPU0ojTgCaAjku4Gnjc0Wobzhf6xHU2llT
-p9AAnRODkr2DsBaOJhhJXEnfoJYXLnl9
-=snrk
+iEYEAREIAAYFAlEVuWEACgkQvFcC4BYPU0oSsgCeIz0lBZyeLkDNA1oDqfWlvYyH
+WQgAniGnJYd3w/O9PMMQuG54+v3a7Wul
+=Tn+0
 -----END PGP SIGNATURE-----
