@@ -1,0 +1,13 @@
+DEFINED_PHASES=compile configure install prepare test unpack
+DEPEND=dev-ml/res:= >=dev-ml/sexplib-109.08.00:= >=dev-ml/bin-prot-109.08.00:= >=dev-ml/fieldslib-109.08.00:= >=dev-ml/pa_ounit-109.08.00:= >=dev-ml/variantslib-109.08.00:= >=dev-ml/comparelib-109.08.00:= >=dev-ml/pipebang-109.08.00:= test? ( >=dev-ml/ounit-1.1.2 ) >=dev-ml/findlib-1.0.4-r1 >=dev-lang/ocaml-3.12:=[ocamlopt?]
+DESCRIPTION=Jane Street's alternative to the standard library
+EAPI=5
+HOMEPAGE=http://www.janestreet.com/ocaml
+IUSE=+ocamlopt debug doc test
+KEYWORDS=~amd64
+LICENSE=LGPL-2.1-with-linking-exception
+RDEPEND=dev-ml/res:= >=dev-ml/sexplib-109.08.00:= >=dev-ml/bin-prot-109.08.00:= >=dev-ml/fieldslib-109.08.00:= >=dev-ml/pa_ounit-109.08.00:= >=dev-ml/variantslib-109.08.00:= >=dev-ml/comparelib-109.08.00:= >=dev-ml/pipebang-109.08.00:= >=dev-lang/ocaml-3.12:=[ocamlopt?]
+SLOT=0/109.08.00
+SRC_URI=http://ocaml.janestreet.com/ocaml-core/109.08.00/individual/core-109.08.00.tar.gz http://dev.gentoo.org/~aballier/distfiles/core-109.08.00.tar.gz
+_eclasses_=base	ec46b36a6f6fd1d0b505a33e0b74e413	eutils	d40dc948067bd3db1c8ebf7d51897313	findlib	9cf6020ee5481f39f1aa566a323f9868	multilib	ded93e450747134a079e647d888aa80b	oasis	d59efb9f3ae0e24a1932b2147425fb8d	toolchain-funcs	69a2016af67775a812f4c03ba4b0e03e	user	d0a4d0735a6c0183d707ca919bd72f28
+_md5_=f04c9d63b33892faca06aaf1ba42299b
