@@ -1,6 +1,11 @@
 # ChangeLog for dev-ml/core
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ml/core/ChangeLog,v 1.15 2013/02/07 19:23:45 aballier Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ml/core/ChangeLog,v 1.16 2013/02/09 02:49:29 aballier Exp $
+
+*core-109.08.00 (09 Feb 2013)
+
+  09 Feb 2013; Alexis Ballier <aballier@gentoo.org> +core-109.08.00.ebuild:
+  version bump
 
 *core-109.07.00 (07 Feb 2013)
 
